--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,17 @@
   			<artifactId>gson</artifactId> 
   			<version>2.8.7</version> 
 		</dependency>
+		<dependency>
+		<groupId>org.json</groupId>
+		 <artifactId>json</artifactId>
+		  <version>20140107</version>
+		  </dependency>
+		  <dependency>
+		     <groupId>net.minidev</groupId>
+   			 <artifactId>json-smart</artifactId>
+   			<version>2.0-RC3</version>
+		</dependency>
+		  
 		<!-- 추가 라이브러리 종료 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
